--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LodgifyMe</title>
 </head>
 <body>
     <h1>This is my Travel WebSite</h1>
     <div class="container">
-        <%- body
+        <%- body %>
     </div>
 </body>
 </html>
