--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LodgifyMe</title>
-</head>
+<% layout('/layouts/boilerplate') %>
 <body>
     <!-- views/listings/edit.ejs -->
 <h1>Edit Listing</h1>
@@ -30,4 +24,3 @@
   <button type="submit">Update Listing</button>
 </form>
 </body>
-</html>
