--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LodgifyMe</title>
-</head>
+<% layout('/layouts/boilerplate') %>
 <body>
     <h1>All Listings</h1>
     <form action="http://localhost:3000/listings/new" method="GET">
@@ -19,4 +13,3 @@
         
     </ul>    
 </body>
-</html>
