--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LodgifyMe</title>
-</head>
+<% layout('/layouts/boilerplate') %>
 <body>
     <!-- Example: views/listings/new.ejs -->
      <h1>Create New Listings</h1>
@@ -30,4 +24,3 @@
   <button type="submit">Create Listing</button>
 </form>
 </body>
-</html>
