gave style to index show edit  new page

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,7 +1,7 @@
 
 
-<footer class="bg-light text-black pt-4 pb-2 mt-5 ">
-  <div class="container">
+<footer class="bg-light text-black pt-4 pb-2 mt-5 border-top " style="width: 100%;">
+  <div class="container-fluid">
     <div class="row align-items-center text-center text-md-start">
       <!-- Left: Company name -->
       <div class="col-12 col-md-3 mb-3 mb-md-0">
@@ -27,7 +27,7 @@
         </div>
       </div>
     </div>
-    <hr class="border-secondary">
+    <!-- <hr class="border-secondary"> -->
     <div class="text-center small">
       &copy; <%= new Date().getFullYear() %> LodgifyMe Pvt Ltd. All rights reserved.
       <br>
