--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,3 +23,72 @@ body {
 .LodgifyMe {
     color: #fe424f;
 }
+
+.card {
+    border: none !important;
+    margin-bottom: 2rem;
+
+}
+.card-img-top {
+    border-radius: 1rem !important;
+    width: 100%;
+    height: 15rem;
+    object-fit: cover !important;
+}
+
+.card-text {
+     font-weight: 600;
+    color: #222222;
+}
+
+.w-100 text-decoration-none text-dark {
+    text-decoration: none;
+    color: #222222;
+}
+.cardClick{
+text-decoration: none;
+}.card-img-overlay {
+.card-img-overlay {
+  background-color: transparent;
+  transition: background-color 0.3s;
+}
+.card:hover .card-img-overlay {
+  background-color: rgba(255,255,255,0.5); /* semi-transparent white */
+}
+}
+
+.btn{
+    border-radius: 5rem !important;
+    margin-bottom: 5px;
+}
+.btn:hover {
+    background-color:#fe424f  !important;
+    color: #000 !important; /* or #fff for white text */
+    border-color: #fe424f !important;
+}
+
+/* Few Form Styling */
+  .cardNew {
+    box-shadow: 0 4px 24px rgba(0,0,0,0.08);
+    border-radius: 1.5rem;
+  }
+  .btn-custom {
+    background-color: #fe424f;
+    color: #fff;
+    border: none;
+    transition: background 0.2s;
+  }
+  .btn-custom:hover {
+    background-color: #d81b27;
+    color: #fff;
+  }
+
+
+  /* Show page Styling */
+  .show-img {
+    width: 80%;
+    height: 20rem;
+    object-fit: cover;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+}
