--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -6,18 +6,18 @@
       <!-- Left: Company name -->
       <div class="col-12 col-md-3 mb-3 mb-md-0">
         <h3 class="LodgifyMe mb-2">
-          <i class="fa-solid fa-house-user"></i>&nbsp;LodgifyMe Pvt Ltd
+          &nbsp;&nbsp;<i class="fa-solid fa-house-user">&nbsp; </i>&nbsp;LodgifyMe Pvt Ltd
         </h3>
       </div>
       <!-- Center: Links -->
       <div class="col-12 col-md-6 mb-3 mb-md-0 text-center">
         <ul class="list-inline mb-2">
-          <li class="list-inline-item"><a href="/" class="text-black text-decoration-none">Home</a></li>
-          <li class="list-inline-item"><a href="/about" class="text-black text-decoration-none">About</a></li>
-          <li class="list-inline-item"><a href="/contact" class="text-black text-decoration-none">Contact</a></li>
+          <li class="list-inline-item"><a href="/" class="text-black text-decoration-none">Home</a></li> &nbsp;&nbsp;
+          <li class="list-inline-item"><a href="/about" class="text-black text-decoration-none">About</a></li>&nbsp;&nbsp;
+          <li class="list-inline-item"><a href="/contact" class="text-black text-decoration-none">Contact</a></li>&nbsp;&nbsp;
           <li class="list-inline-item"><a href="/listings" class="text-black text-decoration-none">Listings</a></li>
         </ul>
-        <small>Design And Develop by <b>Tejas Mehar</b></small>
+       
       </div>
       <!-- Right: Google Map -->
       <div class="col-12 col-md-3 text-md-end">
