--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -5,11 +5,15 @@
     <div class="col-md-6">
       <div class="card shadow-lg rounded-4">
         <div class="card-body p-4">
-          <form action="/listings" method="POST">
+          <form action="/listings" method="POST" novalidate class="needs-validation" >
             <div class="mb-3">
               <label for="title" class="form-label fw-semibold ">Title:</label>
               <input type="text" id="title" name="listing[title]" class="form-control" required>
+              <div class="valid-feedback">
+              Title looks good!
             </div>
+            </div>
+            
             <div class="mb-3">
               <label for="description" class="form-label fw-semibold ">Description:</label>
               <textarea id="description" name="listing[description]" class="form-control" required></textarea>
@@ -21,16 +25,23 @@
             <div class="row">
               <div class="mb-3 col-4">
                 <label for="price" class="form-label fw-semibold ">Price:</label>
-                <input type="number" id="price" name="listing[price]" class="form-control" required>
+                <input  id="price" name="listing[price]" class="form-control" required>
+                   <div class="invalid-feedback">
+                  Please enter a valid price.
+                  </div>
               </div>
               <div class="mb-3 col-8">
                 <label for="country" class="form-label fw-semibold ">Country:</label>
                 <input type="text" id="country" name="listing[country]" class="form-control" required>
+                <div class="invalid-feedback">
+                  Please enter country Name.
               </div>
             </div>
             <div class="mb-3">
               <label for="location" class="form-label fw-semibold">Location:</label>
               <input type="text" id="location" name="listing[location]" class="form-control" required>
+              <div class="invalid-feedback">
+                Please enter location.
             </div>
             <div class="text-center">
               <button type="submit" class="btn btn-danger w-100 fw-bold">Create New Listing</button>
