--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -5,7 +5,7 @@
     <div class="col-md-6">
       <div class="card shadow-lg rounded-4">
         <div class="card-body p-4">
-          <form action="/listings/<%= listing._id %>?_method=PUT" method="POST">
+          <form action="/listings/<%= listing._id %>?_method=PUT" method="POST" class="needs-validation" novalidate>
             <div class="mb-3">
               <label for="title" class="form-label fw-semibold">Title:</label>
               <input type="text" id="title" name="listing[title]" class="form-control" value="<%= listing.title %>" required>
@@ -40,4 +40,5 @@
       </div>
     </div>
   </div>
+  <script src="/js/script.js"></script>
 </body>
