--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -21,7 +21,7 @@
             <div class="row">
               <div class="mb-3 col-4">
                 <label for="price" class="form-label fw-semibold">Price:</label>
-                <input type="number" id="price" name="listing[price]" class="form-control" value="<%= listing.price %>" required>
+                <input  id="price" name="listing[price]" class="form-control" value="<%= listing.price %>" required>
               </div>
               <div class="mb-3 col-8">
                 <label for="country" class="form-label fw-semibold">Country:</label>
