--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -5,7 +5,7 @@
       <div class="card shadow-sm rounded-4">
         <img src="<%= listing.image.url %>" class="card-img-top show-img rounded-top-4" alt="listing_image" style="object-fit:cover; height:320px;">
         <div class="card-body">
-          <h3 class="card-title mb-3 text-danger fw-bold"><%= listing.title %></h3>
+          <h3 class="card-title mb-3 text-danger fw-bold ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= listing.title %></h3>
           <ul class="list-group list-group-flush mb-4">
             <li class="list-group-item"><span class="fw-semibold">Description:</span> <%= listing.description %></li>
             <li class="list-group-item"><span class="fw-semibold">Price:</span> &#8377;<%= listing.price.toLocaleString("en-IN") %> / Night</li>
@@ -24,4 +24,22 @@
       </div>
     </div>
   </div>
+
+<div class="col-10 offset-1">
+  <h3>Leave a Review</h3>
+  
+     <form action="/listings/<%= listing._id %>/reviews" method="POST" class="mb-5">
+      <div class="mb-3 mt-3">
+        <label for="rating">Rating</label>
+        <input type="range" min="1" max="5" step="1" id="rating" name="review[rating]" class="form-range">
+      </div>
+      <div class="mb-3 mt-3">
+        <label for="comment">Comments</label>
+        <textarea id="comment" name="review[comment]" class="form-control" rows="3"></textarea>
+      </div>
+      <div class="mt-3 mb-3">
+        <button type="submit" class="btn btn-primary">Submit Review</button>
+     </form>
+</div>
+
 </body>
