--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -27,14 +27,16 @@
 
 <div class="col-10 offset-1">
   <h3>Leave a Review</h3>
-     <form action="/listings/<%= listing._id %>/reviews" method="POST" class="mb-5">
+     <form action="/listings/<%= listing._id %>/reviews" method="POST" novalidate  class="needs-validation mb-5">
       <div class="mb-3 mt-3">
         <label for="rating">Rating</label>
         <input type="range" min="1" max="5" step="1" id="rating" name="review[rating]" class="form-range">
       </div>
       <div class="mb-3 mt-3">
         <label for="comment">Comments</label>
-        <textarea id="comment" name="review[comment]" class="form-control" rows="3"></textarea>
+        <textarea id="comment" name="review[comment]" class="form-control" rows="3" required></textarea>
+        <div class="invalid-feedback">
+          Please provide a comment.
       </div>
       <div class="mt-3 mb-3">
         <button type="submit" class="btn btn-primary">Submit Review</button>
