image field is getting set to an empty string or undefined during editing, so it disappears on the main page.

--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -16,7 +16,7 @@
             </div>
             <div class="mb-3">
               <label for="image" class="form-label fw-semibold">Image URL:</label>
-              <input type="url" id="image" name="listing[image][url]" class="form-control" value="<%= listing.image.url %>">
+             <input type="url" id="image" name="listing[image]" class="form-control" value="<%= listing.image.url ? listing.image.url : listing.image %>">
             </div>
             <div class="row">
               <div class="mb-3 col-4">
