--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -6,7 +6,7 @@
     </button>
     <div class="collapse navbar-collapse bg-body-light" id="navbarNavAltMarkup">
       <div class="navbar-nav me-auto bg-body-light p-2">
-        <a class="nav-link" href="/">Home</a>
+        <a class="nav-link" href="/listings">Home</a>
         <a class="nav-link" href="/listings">All Listings</a>
         <a class="nav-link" href="/listings/new">Add New Listing</a>
       </div>
