--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -17,10 +17,12 @@
               <i class="bi bi-house-heart-fill me-2 text-danger"></i><%= listing.title %>
             </h3>
             <ul class="list-group list-group-flush mb-4 rounded-3 shadow-sm">
+                <li class="list-group-item bg-light"><span class="fw-semibold">Owned By:</span>  <%= listing.owner ? listing.owner.username : "Unknown" %></li>
               <li class="list-group-item bg-light"><span class="fw-semibold">Description:</span> <%= listing.description %></li>
               <li class="list-group-item"><span class="fw-semibold">Location:</span> <i class="bi bi-geo-alt-fill text-danger"></i> <%= listing.location %></li>
               <li class="list-group-item"><span class="fw-semibold">Country:</span> <i class="bi bi-globe2 text-primary"></i> <%= listing.country %></li>
             </ul>
+            <% if( currUser && currUser._id.equals(listing.owner._id)){ %>
             <div class="d-flex gap-3 justify-content-center mt-4">
               <form action="/listings/<%= listing._id %>/edit" method="GET" class="d-inline">
                 <button type="submit" class="btn btn-warning fw-semibold px-4 shadow-sm rounded-pill">
@@ -33,6 +35,7 @@
                 </button>
               </form>
             </div>
+           <% } %>
           </div>
         </div>
       </div>
