--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -42,6 +42,7 @@
     </div>
 
     <!-- Review Form -->
+     <% if(currUser) { %>
     <div class="row justify-content-center mb-4">
       <div class="col-md-10 col-lg-8">
         <div class="card shadow-lg border-0 rounded-4 bg-white animate__animated animate__fadeIn">
@@ -75,7 +76,7 @@
         </div>
       </div>
     </div>
-
+    <% } %>
     <!-- All Reviews Section (Horizontal Block) -->
      <div class="row justify-content-center">
   <div class="col-md-10 col-lg-8">
