--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -91,7 +91,7 @@
               <div class="d-flex flex-column flex-md-row align-items-start bg-light border rounded-3 shadow-sm p-3">
                 <div class="me-md-3 mb-2 mb-md-0" style="min-width: 150px;">
                   <div class="fw-bold mb-1">
-                    <%= review.user && review.user.name ? review.user.name : "Anonymous" %>
+                    <%= review.author.username && review.author.username ? review.author.username : "Anonymous" %>
                   </div>
                   <div style="color: #ffc107; font-size: 1.2rem;">
                     <% for(let i=1; i<=5; i++) { %>
