--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -22,7 +22,7 @@
             </div>
              <div class="mb-3">
               <label for="image" class="form-label fw-semibold"> Upload Listing Image:</label>
-              <input type="file" id="image" name="listing[image]" class="form-control">
+              <input type="file" id="image" name="image" class="form-control">
             </div>
             <div class="row">
               <div class="mb-3 col-4">
